--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,10 @@
+ACLOCAL_AMFLAGS = -I m4
+
 protonincludedir=$(includedir)/proton/
 protoninclude_HEADERS=$(top_srcdir)/include/proton/*.hpp $(top_srcdir)/include/proton/detail/*.hpp
-include_HEADERS=$(top_srcdir)/include/scpt.hpp
+#include_HEADERS=$(top_srcdir)/include/scpt.hpp
 
-SUBDIRS = src test 
+SUBDIRS = src test
 #examples
 DIST_SUBDIRS = src
 
