--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -2,6 +2,6 @@ TESTS = base_test
 check_PROGRAMS = base_test
 
 base_test_SOURCES = base_test.cpp
-base_test_LDADD = ../src/libproton.la
+base_test_LDADD = $(top_srcdir)/src/libproton.la
 
-INCLUDES = -I../include
+INCLUDES = -I$(top_srcdir)/include
