--- a/configure.ac
+++ b/configure.ac
@@ -26,6 +26,7 @@ AC_PROG_LIBTOOL
 
 # Checks for header files.
 AC_HEADER_STDC
+AC_CHECK_HEADERS([ctime cstring cstdio])
 
 # Checks for typedefs, structures, and compiler characteristics.
 
