--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,5 +2,6 @@ lib_LTLIBRARIES = libproton.la
 
 libproton_la_SOURCES = base.cpp
 libproton_la_LDFLAGS = -version-info 1:0:0 -release 1.1.0 -no-undefined
+# libproton_la_HEADERS = $(top_srcdir)/include/proton/*.hpp $(top_srcdir)/include/proton/detail/*.hpp
 
 INCLUDES = -I$(top_srcdir)/include
