--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.68)
-AC_INIT(proton, 1.1.0, lenx.wei@gmail.com)
+AC_INIT([proton], [1.1.0], [lenx.wei@gmail.com])
 AC_CONFIG_SRCDIR([src/base.cpp])
 AC_CONFIG_AUX_DIR([config])
 AC_CONFIG_MACRO_DIR([m4])
