--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,7 +1,10 @@
-TESTS = base_test
-check_PROGRAMS = base_test
+TESTS = base_test pool_ut
+check_PROGRAMS = base_test pool_ut
 
 base_test_SOURCES = base_test.cpp
 base_test_LDADD = $(top_srcdir)/src/libproton.la
+
+pool_ut_SOURCES = pool_ut.cpp
+pool_ut_LDADD = $(top_srcdir)/src/libproton.la
 
 INCLUDES = -I$(top_srcdir)/include
