--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
 lib_LTLIBRARIES = libproton.la
 
-libproton_la_SOURCES = base.cpp
+libproton_la_SOURCES = base.cpp pool.cpp
 libproton_la_LDFLAGS = -version-info 1:0:0 -release 1.1.0 -no-undefined
 
 proton_includedir=$(includedir)/proton/
