--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,7 @@
 lib_LTLIBRARIES = libproton.la
 
 libproton_la_SOURCES = base.cpp pool.cpp
+libproton_la_CXXFLAGS = $(BOOST_CPPFLAGS)
 libproton_la_LDFLAGS = -version-info 1:0:0 -release 1.1.0 -no-undefined
 
 proton_includedir=$(includedir)/proton/
