--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,5 +1,5 @@
-TESTS = base_test pool_ut
-check_PROGRAMS = base_test pool_ut
+TESTS = base_test pool_ut ref_ut
+check_PROGRAMS = base_test pool_ut ref_ut
 
 base_test_SOURCES = base_test.cpp
 base_test_CXXFLAGS = $(BOOST_CPPFLAGS)
@@ -8,5 +8,9 @@ base_test_LDADD = $(top_srcdir)/src/libproton.la
 pool_ut_SOURCES = pool_ut.cpp
 pool_ut_CXXFLAGS = $(BOOST_CPPFLAGS)
 pool_ut_LDADD = $(top_srcdir)/src/libproton.la
+
+ref_ut_SOURCES = ref_ut.cpp
+ref_ut_CXXFLAGS = $(BOOST_CPPFLAGS)
+ref_ut_LDADD = $(top_srcdir)/src/libproton.la
 
 INCLUDES = -I$(top_srcdir)/include
