fix pool_types.hpp for dist

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -5,7 +5,7 @@ base_test_SOURCES = base_test.cpp
 base_test_CXXFLAGS = $(BOOST_CPPFLAGS)
 base_test_LDADD = $(top_srcdir)/src/libproton.la
 
-pool_ut_SOURCES = pool_ut.cpp
+pool_ut_SOURCES = pool_ut.cpp pool_types.hpp
 pool_ut_CXXFLAGS = $(BOOST_CPPFLAGS)
 pool_ut_LDADD = $(top_srcdir)/src/libproton.la
 
