--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,7 +1,7 @@
 TESTS = func
 check_PROGRAMS = func
 
-func_SOURCES = func.cpp
+func_SOURCES = functor.cpp
 func_CXXFLAGS = $(BOOST_CPPFLAGS)
 func_LDADD = $(top_srcdir)/src/libproton.la
 
