--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,5 +1,5 @@
-TESTS = func vector deque string
-check_PROGRAMS = func vector deque string
+TESTS = func vector deque string getopt
+check_PROGRAMS = func vector deque string getopt
 
 func_SOURCES = functor.cpp
 func_CXXFLAGS = $(BOOST_CPPFLAGS)
@@ -16,5 +16,9 @@ vector_LDADD = $(top_srcdir)/src/libproton.la
 deque_SOURCES = deque.cpp
 deque_CXXFLAGS = $(BOOST_CPPFLAGS)
 deque_LDADD = $(top_srcdir)/src/libproton.la
+
+getopt_SOURCES = getopt.cpp
+getopt_CXXFLAGS = $(BOOST_CPPFLAGS)
+getopt_LDADD = $(top_srcdir)/src/libproton.la
 
 INCLUDES = -I$(top_srcdir)/include
