add more python style classes

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,5 +1,5 @@
-TESTS = eg_func eg_vector eg_deque eg_string eg_getopt eg_tuple
-check_PROGRAMS = eg_func eg_vector eg_deque eg_string eg_getopt eg_tuple
+TESTS = eg_func eg_vector eg_deque eg_string eg_getopt eg_tuple wc
+check_PROGRAMS = eg_func eg_vector eg_deque eg_string eg_getopt eg_tuple wc
 
 eg_func_SOURCES = functor.cpp
 eg_func_CXXFLAGS = $(BOOST_CPPFLAGS)
@@ -24,5 +24,9 @@ eg_getopt_LDADD = $(top_srcdir)/src/libproton.la
 eg_tuple_SOURCES = tuple.cpp
 eg_tuple_CXXFLAGS = $(BOOST_CPPFLAGS)
 eg_tuple_LDADD = $(top_srcdir)/src/libproton.la
+
+wc_SOURCES = wc.cpp
+wc_CXXFLAGS = $(BOOST_CPPFLAGS)
+wc_LDADD = $(top_srcdir)/src/libproton.la
 
 INCLUDES = -I$(top_srcdir)/include
