--- a/libproton.cbp
+++ b/libproton.cbp
@@ -48,20 +48,29 @@
 		<Unit filename="configure.ac" />
 		<Unit filename="dox\Doxyfile" />
 		<Unit filename="examples\Makefile.am" />
+		<Unit filename="examples\deque.cpp" />
 		<Unit filename="examples\functor.cpp" />
+		<Unit filename="examples\getopt.cpp" />
+		<Unit filename="examples\string.cpp" />
+		<Unit filename="examples\tuple.cpp" />
+		<Unit filename="examples\vector.cpp" />
+		<Unit filename="examples\wc.cpp" />
 		<Unit filename="include\mainpage.hpp" />
 		<Unit filename="include\proton\_mapped_type.hpp" />
 		<Unit filename="include\proton\base.hpp" />
+		<Unit filename="include\proton\deque.hpp" />
 		<Unit filename="include\proton\detail\atomic.hpp" />
 		<Unit filename="include\proton\detail\unit_test.hpp" />
 		<Unit filename="include\proton\functor.hpp" />
 		<Unit filename="include\proton\getopt.hpp" />
+		<Unit filename="include\proton\io.hpp" />
 		<Unit filename="include\proton\list.hpp" />
 		<Unit filename="include\proton\map.hpp" />
 		<Unit filename="include\proton\pool.hpp" />
 		<Unit filename="include\proton\ref.hpp" />
 		<Unit filename="include\proton\set.hpp" />
 		<Unit filename="include\proton\string.hpp" />
+		<Unit filename="include\proton\tuple.hpp" />
 		<Unit filename="include\proton\unordered_map.hpp" />
 		<Unit filename="include\proton\unordered_set.hpp" />
 		<Unit filename="include\proton\vector.hpp" />
@@ -73,6 +82,7 @@
 		<Unit filename="test\pool_ut.cpp" />
 		<Unit filename="test\ref_ut.cpp" />
 		<Unit filename="test\test.cpp" />
+		<Unit filename="test\test_.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
