add set & unordered_set

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,5 +1,5 @@
-TESTS = eg_func eg_vector eg_deque eg_string eg_getopt eg_tuple eg_map eg_unordered_map wc
-check_PROGRAMS = eg_func eg_vector eg_deque eg_string eg_getopt eg_tuple eg_map eg_unordered_map wc
+TESTS = eg_func eg_vector eg_deque eg_string eg_getopt eg_tuple eg_set eg_unordered_set eg_map eg_unordered_map wc
+check_PROGRAMS = eg_func eg_vector eg_deque eg_string eg_getopt eg_tuple eg_set eg_unordered_set eg_map eg_unordered_map wc
 
 eg_func_SOURCES = functor.cpp
 eg_func_CXXFLAGS = $(BOOST_CPPFLAGS)
@@ -20,6 +20,14 @@ eg_deque_LDADD = $(top_srcdir)/src/libproton.la
 eg_map_SOURCES = map.cpp
 eg_map_CXXFLAGS = $(BOOST_CPPFLAGS)
 eg_map_LDADD = $(top_srcdir)/src/libproton.la
+
+eg_set_SOURCES = set.cpp
+eg_set_CXXFLAGS = $(BOOST_CPPFLAGS)
+eg_set_LDADD = $(top_srcdir)/src/libproton.la
+
+eg_unordered_set_SOURCES = unordered_set.cpp
+eg_unordered_set_CXXFLAGS = $(BOOST_CPPFLAGS)
+eg_unordered_set_LDADD = $(top_srcdir)/src/libproton.la
 
 eg_unordered_map_SOURCES = unordered_map.cpp
 eg_unordered_map_CXXFLAGS = $(BOOST_CPPFLAGS)
